--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "kill": "kill-port 3000 && kill-port 3001"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
