--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "viem": "^2.37.8",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "alkanes": "git+https://github.com/kungfuflex/alkanes.git"
   },
   "devDependencies": {
     "@types/node": "^22",
