--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "alkanes": "git+https://github.com/kungfuflex/alkanes.git",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,13 +57,13 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "swc": "^1.0.11",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "viem": "^2.37.8",
-    "zod": "^3.24.1",
-    "alkanes": "git+https://github.com/kungfuflex/alkanes.git"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
