--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.4.5",
+    "next": "^16.0.7",
     "next-themes": "^0.4.4",
-    "react": "^18",
+    "react": "^19.2.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
@@ -68,8 +68,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "kill-port": "^2.0.1",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
