--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "alkanes": "git+https://github.com/kungfuflex/alkanes.git",
     "autoprefixer": "^10.4.20",
+    "bitcoinjs-lib": "^7.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "ecpair": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
@@ -62,6 +64,7 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tiny-secp256k1": "^2.2.4",
     "vaul": "^0.9.6",
     "viem": "^2.37.8",
     "zod": "^3.24.1"
