--- a/package.json
+++ b/package.json
@@ -1,16 +1,33 @@
 {
-  "name": "my-v0-project",
+  "name": "subfrost-io",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "kill": "kill-port 3000 && kill-port 3001"
+    "kill": "kill-port 3000 && kill-port 3001",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:live": "RUN_INTEGRATION=true vitest run tests/integration/live-rpc.test.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "setup:local": "pnpm docker:up && sleep 3 && pnpm db:push",
+    "gcp:setup": "bash ./gcp/setup.sh",
+    "gcp:deploy": "bash ./gcp/deploy.sh",
+    "gcp:setup-wif": "bash ./gcp/setup-github-wif.sh",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -59,6 +76,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "redis": "^5.10.0",
     "sonner": "^1.7.1",
     "swc": "^1.0.11",
     "swr": "^2.3.6",
@@ -70,12 +88,19 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.15",
+    "happy-dom": "^20.0.11",
     "kill-port": "^2.0.1",
     "postcss": "^8.5",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.15"
   }
 }
