Fix database sync job to use idempotent 'db push' instead of 'migrate deploy'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -160,7 +160,7 @@ jobs:
           echo "**Custom Domain:** https://${DOMAIN}" >> $GITHUB_STEP_SUMMARY
 
   migrate:
-    name: Run Database Migrations
+    name: Sync Database Schema
     runs-on: ubuntu-latest
     needs: deploy
     environment: ${{ github.event.inputs.environment || 'production' }}
@@ -182,7 +182,7 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Setup migration job
+      - name: Setup schema sync job
         run: |
           IMAGE="${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE_NAME }}:${{ github.sha }}"
           SQL_CONNECTION=$(gcloud sql instances describe subfrost-postgres --format='value(connectionName)' 2>/dev/null || echo "")
@@ -202,6 +202,10 @@ jobs:
           fi
 
           # Create or update the job with correct configuration
+          # Using 'db push' instead of 'migrate deploy' because:
+          # - It's idempotent (safe to run multiple times)
+          # - Doesn't require migration files
+          # - Creates/updates tables to match schema
           gcloud run jobs $ACTION prisma-migrate \
             --region=${{ env.REGION }} \
             --image="${IMAGE}" \
@@ -214,11 +218,11 @@ jobs:
             --set-secrets="DATABASE_URL=db-connection-string:latest" \
             --set-env-vars="NODE_ENV=production" \
             --command="prisma" \
-            --args="migrate,deploy,--schema=./prisma/schema.prisma"
+            --args="db,push,--accept-data-loss,--skip-generate,--schema=./prisma/schema.prisma"
 
-      - name: Run migrations
+      - name: Sync database schema
         run: |
-          echo "Executing database migrations..."
+          echo "Syncing database schema with Prisma..."
           gcloud run jobs execute prisma-migrate \
             --region=${{ env.REGION }} \
             --wait
