Fix TypeScript errors and update SDK to pkg.alkanes.build
- Add public getProvider() method to AlkanesClient for test access
- Update package.json to use https://pkg.alkanes.build/dist/@alkanes/ts-sdk
- Add analyzeRunestone type definition to SDK (missing from index.d.ts)
- Fix type annotations in integration tests
- All ensureProvider() calls now use getProvider()
- SDK version: 0.1.0-dev.20251216001047.aae5959

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,10 @@ NEXT_PUBLIC_NETWORK="mainnet"
 # Node Environment
 # ============================================
 NODE_ENV="development"
+
+# ============================================
+# Admin API Secret
+# ============================================
+# Secret for authenticating admin API endpoints (/api/admin/*)
+# Use a GitHub repository secret for production
+ADMIN_SECRET="change-me-in-production"
